old_research/classifier/pointMLP-pytorch/classification_ModelNet40/logs/custom_test-test_with_data
  File "custom_test.py", line 98
    print("\tmin:",np.min(data.cpu().numpy())
    ^
SyntaxError: invalid syntax
